--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "liv2d-waifu",
-  "version": "0.0.1",
-  "description": "live2d老婆",
+  "version": "0.1",
+  "description": "纸片人老婆",
   "main": "main.js",
   "scripts": {
     "build-main": "npx webpack --config main.webpack.config.js",
@@ -9,7 +9,10 @@
     "build-framework": "npx webpack --config framework.webpack.config.js",
     "watch-framework": "npx webpack --watch --config framework.webpack.config.js",
     "build-all": "npm-run-all build-framework build-main",
-    "watch-all": "npm-run-all watch-framework watch-main"
+    "watch-all": "npm-run-all watch-framework watch-main",
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "build": {
     "productName": "liv2d-waifu",
@@ -24,14 +27,11 @@
       "node_modules/",
       "package.json"
     ],
-    "mac": {
-      "icon": "build/icons/waifu.icns"
-    },
     "win": {
-      "icon": "build/icons/waifu.ico"
+      "icon": "Assets/icon.ico"
     },
-    "linux": {
-      "icon": "build/icons"
+    "electronDownload": {
+      "mirror": "https://npm.taobao.org/mirrors/electron/"
     }
   },
   "devDependencies": {
